# LinGet

./: .gitignore  AGENTS.md  APP_DECOMPOSITION_ANALYSIS.md  AUDIT_COMPLETE.txt  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FE_UI.MD  GEMINI.md  Makefile  PLAN.md  PRIVACY.md  QUICK_REFERENCE.txt  README.md  README_DECOMPOSITION.md  SCHEDULER_AUDIT.md  SCHEDULER_AUDIT_INDEX.md  SCHEDULER_MIGRATION_SEAMS.md  SCHEDULER_QUICK_REFERENCE.md  SECURITY.md  SUPPORT.md  extract_header.py  fix_header.py  fix_ui.py  fix_ui_clean.py  get_queue_fns.py  install.sh  issues.jsonl  linget.py  linget_clean.py  linget_real.py  plan.md  session-ses_446f.md  tui-refactor-plan.md
.automaker/: app_spec.txt
.automaker/features/appimage-backend/: feature.json
.automaker/features/apt-backend/: agent-output.md  feature.json
.automaker/features/aur-backend/: feature.json
.automaker/features/backup-restore/: feature.json
.automaker/features/brew-backend/: feature.json
.automaker/features/caching-system/: feature.json
.automaker/features/cargo-backend/: agent-output.md  feature.json
.automaker/features/cli-check-command/: feature.json
.automaker/features/cli-command-structure/: feature.json
.automaker/features/cli-info-command/: feature.json
.automaker/features/cli-install-command/: feature.json
.automaker/features/cli-list-command/: feature.json
.automaker/features/cli-output-formatting/: feature.json
.automaker/features/cli-remove-command/: feature.json
.automaker/features/cli-search-command/: feature.json
.automaker/features/cli-shell-completions/: feature.json
.automaker/features/cli-sources-command/: feature.json
.automaker/features/cli-update-command/: feature.json
.automaker/features/conda-backend/: feature.json
.automaker/features/configuration-system/: feature.json
.automaker/features/core-package-detection/: agent-output.md  feature.json
.automaker/features/dart-backend/: feature.json
.automaker/features/deb-backend/: feature.json
.automaker/features/desktop-entry-integration/: feature.json
.automaker/features/dnf-backend/: agent-output.md  feature.json
.automaker/features/documentation/: feature.json
.automaker/features/error-handling/: agent-output.md  feature.json
.automaker/features/flatpak-backend/: agent-output.md  feature.json
.automaker/features/gui-dark-light-theme/: feature.json
.automaker/features/gui-discover-view/: feature.json
.automaker/features/gui-favorites-view/: feature.json
.automaker/features/gui-header-bar/: feature.json
.automaker/features/gui-keyboard-shortcuts/: feature.json
.automaker/features/gui-library-view/: feature.json
.automaker/features/gui-main-window/: feature.json  (+1 more)
.beads/: issues.jsonl
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  provider.yml
.github/workflows/: ci.yml  release.yml
data/: io.github.linget.desktop
data/applications/: io.github.linget.desktop
docs/: BRD-001-reliability-and-trust-foundation.md  BRD-002-unified-cross-interface-experience.md  BRD-003-discovery-and-recommendation-intelligence.md  BRD-004-dependency-aware-safe-operations.md  BRD-005-update-policy-engine-automation-observability.md  BRD-006-requirements-completeness-and-gap-analysis.md  BRD_INDEX.md  BRD_TUI-ALL-REQUIREMENTS.md  BRD_TUI_EPICS_AND_STORIES.md  LINGET_TAURI_PLAN.md  cohort-report.md  provider-support.md  release-artifacts.md  release-notes-r1.md  release-notes-v0.2.0-rc.1.md  release-notes-v0.2.0-rc.2.md  tui-operator-e2e.md  tui-queue-e2e.md  tui-ui-ux-review.md  tui-update-center-e2e.md  v0.2-cohort-scorecard.md
docs/cohort-v0.2/: README.md  cohort-scorecard.schema.json  day-seven-check-in.md  facilitator-guide.md  first-session-check-in.md  outreach.md  participant-guide.md  sharing-loop.md
experiments/iced/: Cargo.toml
experiments/relm4/: Cargo.toml
linget/: __init__.py  cache.py  history.py  logger.py  models.py  plugin.py  search.py  settings.py  validation.py
linget-electron/: main.js  package-lock.json  package.json  preload.js
linget-electron/src/: index.html  renderer.js  styles.css
linget-gtk/data/: package_relations.json
linget-gtk/src/: app.rs
linget-tauri/: 00_START_HERE.md  ANALYSIS_COMPLETE.txt  DECOMPOSITION_ROADMAP.md  DX9.6_DECOMPOSITION_SUMMARY.md  IPC_MAPPING_VISUAL.txt  IPC_QUICK_REF.txt  IPC_SURFACE_ANALYSIS.md  README_DECOMPOSITION.md
linget-tauri/src-tauri/: Cargo.toml  tauri.conf.json
linget-tauri/src-tauri/src/: main.rs
linget-tauri/ui/: index.html  package-lock.json  package.json  tailwind.config.js
linget/plugins/: __init__.py  example_plugin.py
logs/: parallel-events.jsonl  tracker-events.jsonl
resources/: style.css
scripts/: check-no-tracked-artifacts.sh  cohort_report.py  dev-smoke-tui.sh  install-deps.sh  package_release.sh  smoke-cohort-report.sh  smoke-install.sh  verify_release.sh
src/: app.rs  lib.rs  main.rs  product.rs  scheduler_runtime.rs
src/backend/: appimage.rs  apt.rs  aur.rs  brew.rs  cargo.rs  conda.rs  dart.rs  deb.rs  dnf.rs  flatpak.rs  history_tracker.rs  mamba.rs  mod.rs  npm.rs  pacman.rs  pip.rs  pipx.rs  pkexec.rs  providers.rs  snap.rs  streaming.rs  traits.rs  transaction.rs  zypper.rs
src/cli/: mod.rs  output.rs
src/models/: alias.rs  appearance.rs  backup.rs  cache.rs  changelog.rs  config.rs  enrichment.rs  error.rs  flatpak_metadata.rs  health.rs  history.rs  icons.rs  insights.rs  mod.rs  package.rs  package_list.rs  recommendations.rs  repository.rs  scheduler.rs
src/ui/: about.rs  alias_view.rs  appearance.rs  backup.rs  command_center.rs  command_palette.rs  diagnostics.rs  empty_state.rs  history_view.rs  mod.rs  notifications.rs  onboarding.rs  operations.rs  package_details.rs  package_row.rs  preferences.rs  relm_app.rs  repositories.rs  shortcuts.rs  skeleton.rs  state.rs  storage_view.rs  task_queue_view.rs  tray.rs  utils.rs  window.rs
tasks/: linget-tui-facelift-prd.md
tests/: test_cohort_report.py  test_docs_contracts.py
tests/fixtures/: cohort-scorecard-hold-incomplete.json  cohort-scorecard-hold-safety.json  cohort-scorecard-pass.json  stable-provider-contracts.json
(+169 files in other folders)
