[package]
name = "linget"
version = "0.1.0"
edition = "2021"
description = "A modern GUI package manager for Linux - like winget for Windows"
authors = ["LinGet Contributors"]
license = "GPL-3.0"
repository = "https://github.com/linget/linget"
keywords = ["package-manager", "linux", "gtk", "gui"]
categories = ["gui", "system"]

[dependencies]
# Use versions compatible with Ubuntu 22.04 (GTK 4.6, libadwaita 1.1)
gtk4 = "0.7"
libadwaita = "0.5"
tokio = { version = "1", features = ["full", "rt-multi-thread", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-channel = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
which = "7"
regex = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
open = "5"
notify-rust = "4"
toml = "0.8"
humansize = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
