[package]
name = "linget"
version = "0.1.5"
edition = "2021"
description = "A modern GUI package manager for Linux - like winget for Windows"
authors = ["LinGet Contributors"]
license = "GPL-3.0"
repository = "https://github.com/linget/linget"
keywords = ["package-manager", "linux", "gtk", "gui"]
categories = ["gui", "system"]

[dependencies]
# Use versions compatible with Ubuntu 22.04 (GTK 4.6, libadwaita 1.1)
gtk4 = "0.7"
gdk-pixbuf = "0.18"
libadwaita = "0.5"
tokio = { version = "1", features = ["full", "rt-multi-thread", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-channel = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
which = "7"
regex = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
open = "5"
notify-rust = "4"
toml = "0.8"
humansize = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ksni = "0.2"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "color"] }
clap_complete = "4.5"
tabled = "0.16"
console = "0.15"
indicatif = "0.17"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[package.metadata.deb]
maintainer = "LinGet Contributors <https://github.com/linget/linget>"
copyright = "2025, LinGet Contributors"
license-file = ["LICENSE", "4"]
depends = "$auto, libgtk-4-1, libadwaita-1-0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/linget", "usr/bin/", "755"],
    ["data/io.github.linget.desktop", "usr/share/applications/", "644"],
    ["data/icons/hicolor/scalable/apps/io.github.linget.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["data/icons/hicolor/symbolic/apps/io.github.linget-symbolic.svg", "usr/share/icons/hicolor/symbolic/apps/", "644"],
    ["README.md", "usr/share/doc/linget/README.md", "644"],
]
