[package]
name = "linget"
version = "0.2.0-rc.1"
edition = "2021"
description = "A unified terminal package manager for Linux"
authors = ["LinGet Contributors"]
license = "GPL-3.0"
repository = "https://github.com/linget/linget"
keywords = ["package-manager", "linux", "terminal", "tui"]
categories = ["command-line-utilities"]

[features]
default = []
gui = [
    "dep:gdk-pixbuf",
    "dep:gtk4",
    "dep:ksni",
    "dep:libadwaita",
    "dep:notify-rust",
    "dep:relm4",
]

[dependencies]
# GTK4 0.9 (supports GTK 4.14) and libadwaita 0.7 (supports libadwaita 1.5)
gtk4 = { version = "0.9", optional = true }
gdk-pixbuf = { version = "0.20", optional = true }
libadwaita = { version = "0.7", features = ["v1_5"], optional = true }
relm4 = { version = "0.9", features = ["libadwaita"], optional = true }
tokio = { version = "1", features = ["full", "rt-multi-thread", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-channel = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1"
dirs = "5"
which = "7"
regex = "1"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
open = "5"
notify-rust = { version = "4", optional = true }
toml = "0.8"
humansize = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ksni = { version = "0.2", optional = true }
uuid = { version = "1", features = ["v4"] }
semver = "1"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "color"] }
clap_complete = "4.5"
tabled = "0.16"
console = "0.15"
indicatif = "0.17"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[package.metadata.deb]
maintainer = "LinGet Contributors <https://github.com/linget/linget>"
copyright = "2025, LinGet Contributors"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/linget", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/linget/README.md", "644"],
]
